B&L QA/objects/Venue__c.object
<CustomObject>
    <description>USSUR to track venues for dinners/demos</description>
    <fields>
        <fullName>City__c</fullName>
        <description>USSUR Venue City</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_notes__c</fullName>
        <description>USSUR Description/notes</description>
        <label>Description/notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>USSUR email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>USSUR Phone</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>USSUR State/Province</description>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <description>USSUR Street Address</description>
        <label>Street Address</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>USSUR Venue Website</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <description>USSUR Venue Zip</description>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>review_website__c</fullName>
        <description>USSUR place to copy in a link to a review website</description>
        <inlineHelpText>Enter in a link to the restaurant&apos;s review on one of the popular restaurant review websites</inlineHelpText>
        <label>Review website</label>
        <type>Url</type>
    </fields>
    <label>Venue</label>
    <listViews>
        <fullName>USSUR_All_Venues</fullName>
        <columns>NAME</columns>
        <columns>Street_Address__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>USSUR - All Venues</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Venue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Venues</pluralLabel>
    <recordTypes>
        <fullName>USSUR</fullName>
        <active>true</active>
        <description>US Surgical</description>
        <label>USSUR</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>